--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,19 @@
 </form> -->
 
 <form [formGroup]="frm" (ngSubmit)="onSubmit()">
-    <input type="text" placeholder="Name">
-    <input type="text" placeholder="Surname">
-    <input type="text" placeholder="Email">
-    <input type="text" placeholder="Tel">
+    <input type="text" placeholder="Name" formControlName="name"> <br>
+    <input type="text" placeholder="Surname" formControlName="surname"> <br>
+    <input type="text" placeholder="Email" formControlName="email"> <br>
+    <input type="text" placeholder="Tel" formControlName="tel"> <br>
+
+    <div formGroupName="addressGroup">   
+        <input type="text" placeholder="Country" formControlName="country"> <br>
+        <input type="text" placeholder="City" formControlName="city"><br>
+        <input type="text" placeholder="Address" formControlName="address"> <br>
+    </div>
+    
 
     <button>Send</button>
 </form>
-
+Valid : {{frm.valid}}
 
